12-kubernetes-05-cni/src/manifests/network-policy/00-default-ingress-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ingress-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
