12-kubernetes-05-cni/src/manifests/network-policy/10-hello-world.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
    - Ingress
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 8080
